--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Other
+
+info
+collectedData/resultsRF.json
+collectedData/resultsXGB.json
+output_*.ipynb
+executedNotebooks/output_*.ipynb
