--- a/.gitignore
+++ b/.gitignore
@@ -209,7 +209,6 @@ __marimo__/
 # Other
 
 info
-collectedData/resultsRF.json
-collectedData/resultsXGB.json
+collectedData/
 output_*.ipynb
 executedNotebooks/output_*.ipynb
